iam: implement doAttachInlinePolicy(GCP)

--- a/iam/pom.xml
+++ b/iam/pom.xml
@@ -13,5 +13,18 @@
     <description>MultiCloudJ Identity and Access Management</description>
     <modules>
         <module>iam-client</module>
+        <module>iam-gcp</module>
     </modules>
+    <dependencies>
+        <dependency>
+            <groupId>com.google.inject</groupId>
+            <artifactId>guice</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.google.auto.service</groupId>
+            <artifactId>auto-service</artifactId>
+            <version>1.0-rc7</version>
+            <scope>provided</scope>
+        </dependency>
+    </dependencies>
 </project>
